alteraçoes (com erros) no login

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -36,11 +36,13 @@ dist.jlink.output=${dist.jlink.dir}/ProjetoFinal
 endorsed.classpath=
 excludes=
 file.reference.mysql-connector-j-8.1.0.jar=C:\\Users\\Marcio Almeida\\Desktop\\OneDrive\\Analise e Desenvolvimento de Sistemas\\SemestreIV\\POOII\\ProfThais\\mysql-connector-j-8.1.0.jar
+file.reference.mysql-connector-java-8.0.17.jar=D:\\Documentos\\IFRS\\POO2\\Aula14\\mysql-connector-java-8.0.17.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.absolutelayout.classpath}:\
-    ${file.reference.mysql-connector-j-8.1.0.jar}
+    ${file.reference.mysql-connector-j-8.1.0.jar}:\
+    ${file.reference.mysql-connector-java-8.0.17.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
